--- a/projeto-pratico/css/estilo.css
+++ b/projeto-pratico/css/estilo.css
@@ -16,3 +16,13 @@ body {
     padding-bottom: 15px;
     background: url(../imgs/bgslider.png);
 }
+
+section {
+    padding-top: 25px;
+    padding-bottom: 15px;
+    min-height: 100vh;
+}
+
+.div_colorida {
+    background: url(../imgs/bgslider.png);
+}
