--- a/projeto-pratico/css/estilo.css
+++ b/projeto-pratico/css/estilo.css
@@ -86,3 +86,16 @@ img.grayscale:hover {
 .contato .aviso {
     padding: 20px;
 }
+
+.form-login {
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border-radius: 10px;
+    background: #eee;
+}
+
+.form-login input {
+    margin-bottom: 10px;
+}
