--- a/projeto-pratico/css/estilo.css
+++ b/projeto-pratico/css/estilo.css
@@ -103,3 +103,14 @@ img.grayscale:hover {
 .panel {
     margin-bottom: 2px;
 }
+
+.conteudo-painel {
+    background: white;
+    border-radius: 8px;
+    border: 1px solid #eee;
+    box-shadow: 5px 5px 5px #888;
+}
+
+.conteudo-painel-int {
+    padding: 12px;
+}
